利用我们的架构，做一个类似于Copilot的知识库问答系统